--- a/GB_Emu/GB_Emu.vcxproj
+++ b/GB_Emu/GB_Emu.vcxproj
@@ -123,9 +123,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="GB_Emu.cpp" />
+    <ClCompile Include="cpu.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="memory.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="cpu.h" />
+    <ClInclude Include="memory.h" />
     <ClInclude Include="sysInfo.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
